[gd_scene load_steps=4 format=3 uid="uid://coa5y47cp4wa7"]

[ext_resource type="Script" path="res://Scripts/bullet.gd" id="1_m7kol"]
[ext_resource type="Texture2D" uid="uid://b7k45e2i6aqet" path="res://Sprites/icon.svg" id="2_tpdb7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xqgc"]
size = Vector2(44, 30)

[node name="Bolt" type="Area2D" groups=["Bullet"]]
script = ExtResource("1_m7kol")
bulletSpeed = 10
damage = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
position = Vector2(0, 1.90735e-06)
scale = Vector2(0.34375, 0.234375)
texture = ExtResource("2_tpdb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5xqgc")

[node name="BulletDespawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="BulletDespawnTimer" to="." method="_on_bullet_despawn_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
